Fixed listViewPage layout break

--- a/src/routes/ListViewPage/ListViewPage.scss
+++ b/src/routes/ListViewPage/ListViewPage.scss
@@ -13,7 +13,6 @@ body {
 .event-details {
   height: 100vh;
   overflow-y: auto;
-  position: absolute;
 
   .padding-top-4rem {
     padding-top: 4rem;
